Added accuracy metrics to backend
